# openclaude

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HIVE_INTEGRATION.md  LESSONS.md  Oops.rej  README.md  fix_all_stubs.cjs  fix_all_stubs_v2.cjs  fix_generics.cjs  fix_ts.cjs  fix_ts.js  fix_ts_comparisons.cjs  fix_ts_errors_regex.ts  fix_ts_errors_tsmorph.ts  fix_ts_exports.cjs  fix_ts_typeof.cjs  fix_ts_types.cjs  install.js  install.ps1  install.sh  missing_modules.txt  package.json  tsc_output.txt  tsc_output_2.txt  tsconfig.json
.clawpatch/: config.json  project.json
config/: mcporter.json
docs/: DEERFLOW-ANALYSIS.md  WEBUI-SPEC.md  advanced-setup.md  completion-audit-2026-05-17.md  litellm-setup.md  non-technical-setup.md  quick-start-mac-linux.md  quick-start-windows.md  repo-map.md  upstream-sync-2026-05.md
scripts/: build.ts  cli-smoke.ts  externals.ts  generate-sdk-types.ts  grpc-cli.ts  install.ps1  install.sh  nightly-autonomy.sh  nightly-update.sh  no-telemetry-plugin.ts  postbuild-patch.mjs  postbuild-patch.test.ts  provider-bootstrap.ts  provider-launch.ts  provider-recommend.ts  render-coverage-heatmap.ts  start-grpc.ts  system-check.test.ts  system-check.ts
src/: QueryEngine.ts  Tool.ts  commands.test.ts  commands.ts  context.ts  global.d.ts  history.ts  interactiveHelpers.dangerousMode.test.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingSteps.test.ts  projectOnboardingSteps.ts  query.ts  setup.ts  tools.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1242 files in other folders)
